samples/_failures_safe/1761533241_9c5709_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_23354bec.c: In function ‘main’:
./samples/SAFE/__tmp_23354bec.c:143:12: error: missing terminating " character
  143 |     printf("Running Dijk
      |            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_23354bec.c:143:5: error: expected expression at end of input
  143 |     printf("Running Dijk
      |     ^~~~~~
./samples/SAFE/__tmp_23354bec.c:143:5: error: expected declaration or statement at end of input
